Make changes to activity_main.xml such that we can test JSON queries and remove the dummy data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PopularMovies9</string>
+    <string name="edit_text_hint_search">Enter a query, then click Search</string>
 </resources>
