--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">PopularMovies9</string>
     <string name="edit_text_hint_search">Enter a query, then click Search</string>
+
+    <!-- Menu items for MainActivity-->
+    <string name="popular_movies_search">Popular Movies</string>
+    <string name="highly_rated_movies_search">Highly Rated Movies</string>
+
 </resources>
