--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">PopularMovies9</string>
     <string name="edit_text_hint_search">Enter a query, then click Search</string>
 
+    <string name="error_message">Failed to get results. Please try again.</string>
+
     <!-- Menu items for MainActivity-->
     <string name="popular_movies_search">Popular Movies</string>
     <string name="highly_rated_movies_search">Highly Rated Movies</string>
