--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="vote_average">Vote Average: </string>
     <string name="movie_synopsis">Synopsis </string>
     <string name="movie_id">Movie Id: </string>
+    <string name="user_reviews">User Reviews</string>
 
 </resources>
