Add Trailers to DetailActivity using AsyncTask

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="movie_synopsis">Synopsis </string>
     <string name="movie_id">Movie Id: </string>
     <string name="user_reviews">User Reviews</string>
+    <string name="trailers">Trailers</string>
 
 </resources>
