--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="movie_id">Movie Id: </string>
     <string name="user_reviews">User Reviews</string>
     <string name="trailers">Trailers</string>
+    <string name="trailer_button">Show Trailers</string>
 
 </resources>
