--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,17 @@
     <!-- Menu items for MainActivity-->
     <string name="popular_movies_search">Popular Movies</string>
     <string name="highly_rated_movies_search">Highly Rated Movies</string>
+    <string name="search_favorite_movies">Search Favorite Movies</string>
+
+    <!-- SearchMoviesActivity -->
+    <string name="search">Search</string>
+    <string name="search_hint">Enter movie title</string>
+    <string name="find_a_favorite_movie">Find a Favorite Movies</string>
+    <string name="enter_a_movie_title">Please enter a movie title</string>
+
+    <string name="no_results_found">No results found</string>
+    <string name="no_internet_connection">No Internet connection</string>
+    <string name="invalid_entry">Invalid entry</string>
 
     <!-- Detail Activity -->
     <string name="release_date">Release Date: </string>
