--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
     <string name="trailers">Trailers</string>
     <string name="trailer_button">Show Trailers</string>
 
+    <!-- SettingsActivity -->
+    <string name="action_settings">Settings</string>
+
+
 </resources>
