--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <!-- Menu items for MainActivity-->
     <string name="popular_movies_search">Popular Movies</string>
     <string name="highly_rated_movies_search">Highly Rated Movies</string>
-    <string name="my_favorite_movies">My Favorite Movies</string>
-    <string name="search_favorite_movies">Search Favorite Movies</string>
+    <string name="my_favorite_movies">My Favorites</string>
+    <string name="search_favorite_movies">Search Favorites</string>
 
     <!-- SearchMoviesActivity -->
     <string name="search">Search</string>
