Add method to DetailActivity to add a movie to Favorites database and implement insert to handle requests to insert a single new row of data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="user_reviews">User Reviews</string>
     <string name="trailers">Trailers</string>
     <string name="trailer_button">Show Trailers</string>
+    <string name="favorites_button">Add</string>
+    <string name="remove_favorites_button">Remove</string>
+
 
     <!-- SettingsActivity -->
     <string name="action_settings">Settings</string>
