--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PopularMovies9</string>
+    <string name="app_name">Popular Movies</string>
     <string name="edit_text_hint_search">Enter a query, then click Search</string>
 
     <string name="error_message">Failed to get results. Please try again.</string>
@@ -34,7 +34,7 @@
 
 
     <!-- SettingsActivity -->
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Select Popularity Type</string>
 
     <!--  Used by Preferences   -->
 
@@ -63,6 +63,6 @@
 
     <string name="pref_key" translatable="false">popularity</string>
 
-    <string name="pref_label">Popularity Types</string>
+    <string name="pref_label">Select Popularity Type</string>
 
 </resources>
