--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,11 +27,11 @@
     <string name="movie_synopsis">Synopsis </string>
     <string name="movie_id">Movie Id: </string>
     <string name="user_reviews">User Reviews</string>
-    <string name="first_trailer">First Trailer</string>
     <string name="trailers">Trailers</string>
     <string name="trailer_button">Show Trailers</string>
     <string name="favorites_button">Add</string>
     <string name="remove_favorites_button">Remove</string>
+    <string name="watch_trailer">Watch A Trailer</string>
 
 
     <!-- SettingsActivity -->
